--- a/public/admin.html
+++ b/public/admin.html
@@ -303,7 +303,7 @@
 
 <script>
 /* ✅ TOKEN FIJO (Daiana) */
-const TOKEN = "daiana-2026";
+const TOKEN = "lucia-2026";
 
 /* ✅ Endpoints con .js */
 const API_ADMIN = `/api/admin.js?token=${encodeURIComponent(TOKEN)}&get=1`;
