--- a/public/admin.html
+++ b/public/admin.html
@@ -302,7 +302,7 @@
 </div>
 
 <script>
-/* ✅ TOKEN FIJO (Daiana) */
+/* ✅ TOKEN FIJO (Lucia) */
 const TOKEN = "lucia-2026";
 
 /* ✅ Endpoints con .js */
@@ -328,7 +328,7 @@ for(let i=0;i<90;i++)P.push({x:Math.random()*c.width,y:Math.random()*c.height,vx
 })();
 
 /* 🔐 LOGIN SIMPLE */
-const LOGIN_USER = "Daiana";
+const LOGIN_USER = "Lucia";
 const LOGIN_PASS = "Pulze2026";
 const SESSION_MINUTES = 10;
 
